--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.14",
     "lodash": "^4.17.21",
-    "next": "14.0.2",
+    "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
